add my-links component
