# back-short-link/src/main/java/ru/arsentiev/backshortlink/mappers/LinkRequestMapper.java
@@ -12,28 +12,25 @@ import ru.arsentiev.backshortlink.url.UrlShortenerService;
 import java.security.NoSuchAlgorithmException;
 import java.time.LocalDateTime;
 
-@Mapper(componentModel = "spring")
+@Mapper(componentModel = "spring", uses = {CategoryResponseMapper.class})
 public abstract class LinkRequestMapper {
     @Autowired
     private UrlShortenerService urlShortenerService;
 
-    @Mapping(source = "linkRequest.idCategory", target = "category.id")
+    @Mapping(source = "linkRequest.categoryResponse", target = "category")
     @Mapping(target = "id", ignore = true)
+    @Mapping(target = "createdDate", expression = "java(nowTime())")
+    @Mapping(target = "lastModifiedDate", ignore = true)
     @Mapping(source = "user", target = "user")
-    @Mapping(target = "removeDate", expression = "java(calculateRemoveDate(linkRequest.getValidHours()))")
     @Mapping(target = "shortLink", expression = "java(generateShortLink(linkRequest))")
     public abstract Link dtoToLink(LinkRequest linkRequest, User user);
 
-    @Mapping(source = "linkRequest.idCategory", target = "category.id")
+    @Mapping(source = "linkRequest.categoryResponse", target = "category")
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "shortLink", ignore = true)
-    @Mapping(target = "removeDate", expression = "java(calculateRemoveDate(linkRequest.getValidHours()))")
+    @Mapping(target = "createdDate", ignore = true)
+    @Mapping(target = "lastModifiedDate", ignore = true)
     public abstract void updateLinkFromDto(LinkRequest linkRequest, @MappingTarget Link link);
-
-
-    protected LocalDateTime calculateRemoveDate(int validHours) {
-        return LocalDateTime.now().plusHours(validHours);
-    }
 
     protected String generateShortLink(LinkRequest linkRequest) {
         try {
@@ -41,5 +38,9 @@ public abstract class LinkRequestMapper {
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException("Error generating short link", e);
         }
+    }
+
+    protected LocalDateTime nowTime() {
+        return LocalDateTime.now();
     }
 }
